@@ -1,0 +1,19 @@
+preamble: 
+property: suite: enum[stable,testing,unstable] = [stable],
+ bugs: int = [0],
+ description: string = ["no description"],
+ recommends: vpkgformula = [ true! ]
+univ-checksum: 8c6d8b4d0cf7027cd523ad095d6408b4901ac31c
+status-checksum: 6936ce910eb716ad97190393f80c14ab04d95b3d
+req-checksum: 17259225eaf63642f9ab99a627b9857a5b27c5f7
+
+package: car
+version: 1
+depends: engine, wheel, door, battery
+installed: true
+description: 4-wheeled, motor-powered vehicle
+recommends: gasoline-engine
+
+request: http://www.example.org/8f46e388-042f-415e-8aab-df4eeb974444.dudf
+install: bicycle, electric-engine = 1
+upgrade: door, wheel > 2
